<resources>
    <string name="app_name">BikeMechanicApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_line_1">Bike Man Dan</string>
    <string name="title_line_2">Mobile Bicycle Mechanic</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="no_account_label">Don\'t have an account?</string>
    <string name="register_btn">Register</string>
    <string name="login_btn"><u>Login</u></string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password (Min 8 chars incl digits)</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3</string>
    <string name="postcode_label">Post Code</string>
    <string name="email_label">Email</string>
    <string name="contact_num_label">Contact Number</string>
    <string name="upload">Upload</string>
    <string name="upload_pic_label">Upload a picture of your bike</string>
    <string name="next_btn">Next</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="title_activity_customer_registration">CustomerRegistrationActivity</string>
    <string name="title_activity_bike_registration">BikeRegistrationActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_job_request">JobRequestActivity</string>
    <string name="title_activity_admin_home2">AdminHome2Activity</string>
    <string name="title_activity_repair_request">RepairRequestActivity</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="bike_make">Make</string>
    <string name="bike_model">Model</string>
    <string name="bike_year">Year</string>
    <string name="bike_any_changes">Any changes since it was new?</string>
    <string name="bike_tyre_size">Tyre size</string>
    <string name="bike_no_of_chainrings">No. of front cogs</string>
    <string name="bike_rear_cogs">No. of rear cogs</string>
    <string name="bike_no_of_gears">No. of gears (Hub Geared bike)</string>
    <string name="bike_brake_types">Type of brakes</string>
    <string name="dont_know">Don\'t know</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="problem_title">Problem Title</string>
    <string name="bike_part_fault">Bike Part Fault</string>
    <string name="confirm_btn">Confirm</string>
    <string name="problem_des">Problem Description</string>
    <string name="type_service">Select repair type service</string>
    <string name="set_appoint_dates">Set your appointment date</string>
    <string name="date">Click to select date</string>
    <string name="time">Time</string>
    <string name="submit">Submit</string>
    <string name="profile">My Profile</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>


</resources>
