<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#4CAF50"
    tools:context="uk.co.bikemandan.bikemechanicapp.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_line_1"
        android:layout_marginTop="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="#FFEB3B"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_line_2"
        android:layout_marginTop="106dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#FFEB3B"
        android:id="@+id/textView"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="150dp"

        android:textColor="#FFEB3B"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_btn"
        android:background="#FFEB3B"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="390dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textStyle="bold"
        android:id="@+id/forgetPass"
        android:onClick="onClick"
        android:textColor="#FFFFFF"
        android:clickable="true"/>


    <Button
    android:id="@+id/login_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="480dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_centerHorizontal="true"
    android:text="@string/register_btn"
    android:background="#FFEB3B"
    />



</RelativeLayout>
