<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="50dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="13dp">



    <EditText
        android:id="@+id/fp_username"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_label"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/fp_password"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:textSize="16sp"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/fp_confirm_pword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_label"
        android:textSize="16sp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/fp_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:background="#FFEB3B"
        android:text="@string/confirm_btn"
        android:textSize="18sp"/>



</LinearLayout>