<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="50dp"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="13dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bike_make"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_make"
                android:textSize="16sp"
                />

            <EditText
                android:id="@+id/bike_model"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_model"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/bike_year"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_year"
                android:textSize="16sp"/>



            <EditText
                android:id="@+id/bike_changes"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_any_changes"
                android:textSize="16sp"
                />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/bike_tyre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_tyre_size"
                android:textSize="16sp"
                android:layout_weight="0"
                android:layout_marginBottom="10dp"/>
            <ImageView
                android:id="@+id/tooltip_tyre"
                android:layout_marginTop="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_tooltip"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_no_of_chainrings"
                android:textSize="16sp"
                android:layout_weight="0"
                android:enabled="false"/>
            <ImageView
                android:id="@+id/tooltip_chainrings"
                android:layout_marginTop="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_tooltip"/>

            <Spinner
                android:id="@+id/spinner_chainrings"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@android:drawable/btn_dropdown"
                />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_rear_cogs"
                android:textSize="16sp"
                android:layout_weight="0"
                android:enabled="false"/>
            <Spinner
                android:id="@+id/spinner_rear_cogs"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@android:drawable/btn_dropdown"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
            <EditText
                android:id="@+id/no_gears"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_no_of_gears"
                android:textSize="16sp"
                android:layout_weight="0"/>

            <ImageView
                android:id="@+id/tooltip_gears"
                android:layout_marginTop="8dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:src="@mipmap/ic_tooltip"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:hint="@string/bike_brake_types"
                android:textSize="16sp"
                android:layout_weight="0"
                android:enabled="false"/>
            <Spinner
                android:id="@+id/spinner_brakes"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:background="@android:drawable/btn_dropdown"/>
            </LinearLayout>
            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="30dp"
                android:background="#FFEB3B"
                android:text="@string/register_btn"
                android:textSize="18sp"/>
</LinearLayout>
    </ScrollView>
</LinearLayout>