<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">


        <EditText
            android:id="@+id/name_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/surname_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Surname"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/email_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/pword_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"
            android:textSize="16sp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/pWord_confirm_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_label"
            android:inputType="textPassword"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/ad1_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ad1"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/ad2_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ad2"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/ad3_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ad3"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/postCode_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Post C"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/contact_add_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contact No"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/update_add_admin"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm_btn"
            android:background="#FFEB3B"
            android:layout_marginTop="10dp"/>

    </LinearLayout>



</android.support.v4.widget.NestedScrollView>